--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-
 name: CI
 
 on: [push, workflow_dispatch]
@@ -6,12 +5,11 @@ on: [push, workflow_dispatch]
 jobs:
   build:
 
-    runs-on: windows-latest
-
+  rgdwe
     steps:
     - name: Download
       run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-    - name: Extract
+    - name: Extractythgvwafcszved42tgvdxz d
       run: Expand-Archive ngrok.zip
     - name: Auth
       run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
@@ -24,14 +22,4 @@ jobs:
     - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "Shahid@123" -Force)
     - name: Create Tunnel
       run: .\ngrok\ngrok.exe tcp 3389
-
-
-
-
-
-
-
-
-
-
 
